--- a/BlackHole/platforms/android/assets/www/index.html
+++ b/BlackHole/platforms/android/assets/www/index.html
@@ -28,14 +28,13 @@
 
     <script src="js/app.js"></script>
 </head>
-<body ng-app="blackapp" class="platform-android platform-cordova platform-webview">
+<body ng-app="blackapp">
 
     <ion-pane ng-controller="BlackCtrl">
         <ion-header-bar class="bar-dark">
             <h1 class="title">Black App</h1>
         </ion-header-bar>
         <ion-content>
-            <p class="etat">Etat : {{connect ? "Connected" : "Deconnected"}}</p>
             <div class="button button-balanced" style="width: 100%; height:100%" ng-if="!state" ng-click=runAcc()>On</div>
             <div class="button button-assertive" style="width: 100%; height:100%" ng-if="state" ng-click=stopAcc()>Off</div>
         </ion-content>
