Création du menu

--- a/BlackHole/platforms/android/assets/www/index.html
+++ b/BlackHole/platforms/android/assets/www/index.html
@@ -28,7 +28,7 @@
 
     <script src="js/app.js"></script>
 </head>
-<body ng-app="blackapp">
+<body ng-app="blackapp" class="platform-android platform-cordova platform-webview">
 
     <ion-pane ng-controller="BlackCtrl">
         <ion-header-bar class="bar-dark">
