--- a/BlackHole/www/index.html
+++ b/BlackHole/www/index.html
@@ -35,6 +35,7 @@
             <h1 class="title">Black App</h1>
         </ion-header-bar>
         <ion-content>
+            <div> {{Menu}}</div>
             <div class="button button-balanced" style="width: 100%; height:100%" ng-if="!state" ng-click=runAcc()>On</div>
             <div class="button button-assertive" style="width: 100%; height:100%" ng-if="state" ng-click=stopAcc()>Off</div>
         </ion-content>
